# final_project_in_matam

./: CMakeLists.txt  Commands.cpp  Commands.h  Expression.cpp  Expression.h  Graph.cpp  Graph.h  Makefile  PyGraph.cpp  PyGraph.h  RunShell.cpp  RunShell.h  Shell.cpp  Shell.h  Tokenize.cpp  Tokenize.h  checkpl.gf  exp_1.txt  graph.i  in_1.txt  test.py
expectations/: exp_1.txt
inputs/: in_1.txt
outputs/: out_1.txt
